--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
  
 <body>
-	<a href='#' id='feedback-button' class='btn btn-primary btn-large'>-</a>
+	<a href='#' id='feedback-button' class='btn btn-primary btn-large'>Log a new Bug/Issue</a>
 
 </body>
 </html>
