--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<!-- We pasted the generated code from the Issue Collector here, after choosing a custom trigger -->
 
 	<!-- This is the script for the issue collector feedback form -->
-  <script src='http://code.jquery.com/jquery-latest.js'></script>
+  <script src='https://code.jquery.com/jquery-latest.js'></script>
 	<script type='text/javascript' src='https://bprgroup.atlassian.net/s/b19e2563dd7b1f2a6059849f0179a938-T/-6t2s03/72002/b6b48b2829824b869586ac216d119363/2.0.13/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector-embededjs.js?locale=en-US&collectorId=66467776'></script>
  
 	<!-- This is the script for specifying the custom trigger.  We've replaced 'myCustomTrigger' with 'feedback-button' -->
