add auto complete name and email

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 	<!-- This is the script for specifying the custom trigger.  We've replaced 'myCustomTrigger' with 'feedback-button' -->
 
 	<script type='text/javascript'>
+	var getUrlParameter = function getUrlParameter(sParam) {
+	    var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+	        sURLVariables = sPageURL.split('&'),
+	        sParameterName,
+	        i;
+
+	    for (i = 0; i < sURLVariables.length; i++) {
+	        sParameterName = sURLVariables[i].split('=');
+
+	        if (sParameterName[0] === sParam) {
+	            return sParameterName[1] === undefined ? true : sParameterName[1];
+	        }
+	    }
+	};
+	
 		window.ATL_JQ_PAGE_PROPS = $.extend(window.ATL_JQ_PAGE_PROPS, {
 
 	// ==== custom trigger function ====
@@ -17,7 +32,12 @@
 			e.preventDefault();
 			showCollectorDialog();
 		}); 
-	}
+	},
+	// ==== we add the code below to set the field values ====
+	fieldValues: {
+ 		fullname : getUrlParameter('fullname'),
+		email : getUrlParameter('email'),
+	}	
 });
 	
 		
