--- a/index.html
+++ b/index.html
@@ -47,12 +47,43 @@
     },10);
 });
 	</script>
-
+<style>
+.feedback-button {
+   border-top: 1px solid #96d1f8;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#88949c), to(#65a9d7));
+   background: -webkit-linear-gradient(top, #88949c, #65a9d7);
+   background: -moz-linear-gradient(top, #88949c, #65a9d7);
+   background: -ms-linear-gradient(top, #88949c, #65a9d7);
+   background: -o-linear-gradient(top, #88949c, #65a9d7);
+   padding: 6px 12px;
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   border-radius: 10px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 16px;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.feedback-button:hover {
+   border-top-color: #28597a;
+   background: #28597a;
+   color: #ccc;
+   }
+.feedback-button:active {
+   border-top-color: #a1a4a6;
+   background: #a1a4a6;
+   }
+</style>
 
 </head>
  
 <body>
 	<a href='#' id='feedback-button' class='btn btn-primary btn-large'>Log a new Bug/Issue</a>
-
 </body>
 </html>
