--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 </head>
  
 <body>
-	<a href='#' id='feedback-button' class='btn btn-primary btn-large'>Log a new Bug/Issue</a>
+	<a href='#' id='feedback-button' class='feedback-button'>Log a new Bug/Issue</a>
 </body>
 </html>
