--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<!-- This is the script for specifying the custom trigger.  We've replaced 'myCustomTrigger' with 'feedback-button' -->
 
 	<script type='text/javascript'>
+	var descDefault;
+	descDefault += '1. What is your question or concern?\n\n';
+
+
+	descDefault += '2. What is the record link where you experienced the problem?';
+	
 	var getUrlParameter = function getUrlParameter(sParam) {
 	    var sPageURL = decodeURIComponent(window.location.search.substring(1)),
 	        sURLVariables = sPageURL.split('&'),
@@ -35,6 +41,8 @@
 	},
 	// ==== we add the code below to set the field values ====
 	fieldValues: {
+		priority : '1',
+		description: descDefault,
  		fullname : getUrlParameter('fullname'),
 		email : getUrlParameter('email'),
 	}	
