Update description default value

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type='text/javascript'>
 	var descDefault = '';
 	descDefault += '1. What is your question or concern?\n\n';
-	descDefault += '2. What is the record link where you experienced the problem?\n\n';
+	descDefault += '2. Please provide the browser link where you experienced the problem?\n\n';
 	descDefault += '3. What steps can we take to reproduce the problem/bug you are experiencing?\n\n';
 	descDefault += '4. What is the result you are experiencing when you follow these steps?\n\n';
 	descDefault += '5. What is the result you are expecting?\n\n';
